--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 518e87f
-	trimbase = 
+	trim = icart_mini_description
+	base = d31158f
+	trimbase = 518e87f
 	parent = upstream
 	previous = cb7053c
