--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 08f5438
-	trimbase = 
+	trim = icart_mini_control
+	base = 09ae6db
+	trimbase = 08f5438
 	parent = upstream
 	previous = cb7053c
