--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 544378b
-	trimbase = 
+	trim = icart_mini_driver
+	base = d36289b
+	trimbase = 544378b
 	parent = upstream
 	previous = cb7053c
