--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = aea7edf
-	trimbase = 
+	trim = combine_dr_measurements
+	base = d6f073c
+	trimbase = aea7edf
 	parent = upstream
 	previous = cb7053c
