--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d6f073c
+	base = 4405f3a
 	trimbase = 
 	parent = release/indigo/combine_dr_measurements
-	previous = 
+	previous = d6f073c
