--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d986b63
+	base = 3540ed4
 	trimbase = 
 	parent = debian/indigo/combine_dr_measurements
-	previous = 
+	previous = d986b63
