--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09ae6db
+	base = 8d80a4a
 	trimbase = 
 	parent = release/indigo/icart_mini_control
-	previous = 
+	previous = 09ae6db
