--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35edfda
+	base = 87cc153
 	trimbase = 
 	parent = debian/indigo/icart_mini_control
-	previous = 
+	previous = 35edfda
