--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d31158f
+	base = d403bae
 	trimbase = 
 	parent = release/indigo/icart_mini_description
-	previous = 
+	previous = d31158f
