--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f9e715
+	base = ad24b73
 	trimbase = 
 	parent = debian/indigo/icart_mini_description
-	previous = 
+	previous = 5f9e715
