--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1b54cb
+	base = 62c1750
 	trimbase = 
 	parent = debian/indigo/icart_mini_driver
-	previous = 
+	previous = f1b54cb
