--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf3d9df
+	base = 0abf227
 	trimbase = 
 	parent = rpm/indigo/combine_dr_measurements
-	previous = 
+	previous = cf3d9df
