--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e7c9d5
+	base = abdbdc0
 	trimbase = 
 	parent = rpm/indigo/icart_mini_control
-	previous = 
+	previous = 8e7c9d5
