--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ccb7322
+	base = d986b06
 	trimbase = 
 	parent = rpm/indigo/icart_mini_description
-	previous = 
+	previous = ccb7322
