--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d36289b
+	base = 760ddf0
 	trimbase = 
 	parent = release/indigo/icart_mini_driver
-	previous = 
+	previous = d36289b
