--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3216abb
+	base = a452f8d
 	trimbase = 
 	parent = rpm/indigo/icart_mini_driver
-	previous = 
+	previous = 3216abb
