--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = d31158f
-	trimbase = 518e87f
+	trimbase = 
 	parent = upstream
 	previous = cb7053c
