--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = a78d843
-	trimbase = 
+	base = c1cb7f9
+	trimbase = a78d843
 	parent = upstream
 	previous = cb7053c
