--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = c43b916
-	trimbase = 
+	base = a5378ff
+	trimbase = c43b916
 	parent = upstream
 	previous = cb7053c
