--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 17576fe
-	trimbase = 
+	base = b19bdfc
+	trimbase = 17576fe
 	parent = upstream
 	previous = cb7053c
