--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
 	base = d6f073c
-	trimbase = aea7edf
+	trimbase = 
 	parent = upstream
 	previous = cb7053c
