--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 6331cfc
-	trimbase = 
+	base = 7a18676
+	trimbase = 6331cfc
 	parent = upstream
 	previous = cb7053c
