--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.1-0": ["Tue Nov 25 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"]}
+{"0.0.1-1": ["Tue Nov 25 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"], "0.0.1-0": ["Tue Nov 25 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"]}
