--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = c1cb7f9
-	trimbase = a78d843
+	trimbase = 
 	parent = upstream
 	previous = cb7053c
