--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 31550ce
-	trimbase = 
+	base = 1c531fd
+	trimbase = 31550ce
 	parent = upstream
 	previous = cb7053c
