--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = b169b6f
-	trimbase = 
+	base = 39274d6
+	trimbase = b169b6f
 	parent = upstream
 	previous = cb7053c
