--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 0c8a167
-	trimbase = 
+	base = 36f35bb
+	trimbase = 0c8a167
 	parent = upstream
 	previous = cb7053c
