--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = ac9a11c
-	trimbase = 
+	base = c3d82b2
+	trimbase = ac9a11c
 	parent = upstream
 	previous = cb7053c
